# surrealist

./: .flake8  README.md  pyproject.toml
examples/: structure_synth.py
surrealist/: __init__.py  buffer.py  data.py  dsp_utils.py  event.py  sounds_loader.py  state.py  wav_io.py
surrealist/dsp/: __init__.py  amp.py  distort.py  down.py  loop.py  saturate.py  speed.py  stutter.py
tests/: test_state.py
